<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.edu.ntou.smartcampus.CustomMap.cMarkFragment"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_call"
            android:textSize="24dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/chkEmergencyCall"
            />
        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/phone"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guard"
            android:textSize="24dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/chkGuard"
            />
        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/gguard"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SchoolSecurityOffice"
            android:textSize="24dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/chkSchoolSecurityOffice"
            />
        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/gguard"
            />
    </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convenience_store"
        android:textSize="24dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/chkConvenienceStore"
        />
    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:src="@drawable/conv"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convenience_store1"
            android:textSize="24dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/chkConvenienceStore1"
            />
        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/ccconv"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_gate"
            android:textSize="24dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/chkSchoolGate"
            />
        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/gate"
            />
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/night_brightt_route"
        android:textSize="24dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/chkNightBrightRoute"
        />
    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:src="@drawable/yellow" />
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_protection_route"
        android:textSize="24dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/chkWeatherProtectionRoute"
        />
    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:src="@drawable/blue"/>
</LinearLayout>
        </LinearLayout>

